# Freelance-Contract

./: README.md  cabal.project  development.cabal  hie.yaml
src/Contract/: Freelance.hs  FreelanceTrace.hs
test/: Tests.hs
test/PropertyTests/: Model.hs
test/UnitTests/: BasicTests.hs  EndingTests.hs
